--- a/deploy/brighid-discord-adapter.template.yml
+++ b/deploy/brighid-discord-adapter.template.yml
@@ -29,6 +29,10 @@ Parameters:
     Type: String
     Description: URI of the identity server.
 
+  StaticAssetsRepositoryUrl:
+    Type: String
+    Description: URL of the static assets repository where images are stored.
+
   RegistrationUrl:
     Type: String
     Description: URL that users can register and link their Discord account at.
@@ -272,6 +276,8 @@ Resources:
               Value: !Ref ClientId
             - Name: Encrypted__Adapter__ClientSecret
               Value: !Ref ClientSecret
+            - Name: Adapter__StaticAssetsRepositoryUrl
+              Value: !Ref StaticAssetsRepositoryUrl
             - Name: Adapter__RegistrationUrl
               Value: !Ref RegistrationUrl
             - Name: Adapter__OAuth2RedirectUri
