--- a/template.yml
+++ b/template.yml
@@ -381,7 +381,7 @@ Resources:
       Handler: ResponseHandler::Brighid.Discord.Adapter.ResponseHandler.Handler::Run
       Runtime: provided.al2
       Timeout: 30
-      CodeUri: ../bin/ResponseHandler/Release/linux-x64/publish/
+      CodeUri: ./bin/ResponseHandler/Release/linux-x64/publish/
       MemorySize: 512
       Layers:
         - !Sub "{{resolve:ssm:/dotnet/${DotnetVersion}/layer-arn}}"
