--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -34,6 +34,13 @@ jobs:
           role-to-assume: ${{ secrets.AWS_SHARED_ROLE }}
           aws-region: us-east-1
 
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "14"
+
+      - name: Install CDK
+        run: npm install --global cdk
+
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v1
 
