--- a/cicd/Cicd.BuildDriver/Cicd.BuildDriver.csproj
+++ b/cicd/Cicd.BuildDriver/Cicd.BuildDriver.csproj
@@ -8,7 +8,19 @@
         <AssemblyAttribute Include="ProjectRootDirectory">
             <_Parameter1>$([System.IO.Path]::GetFullPath('$(MSBuildThisFileDirectory)../../'))</_Parameter1>
         </AssemblyAttribute>
+
+        <AssemblyAttribute Include="DotnetSdkVersion">
+            <_Parameter1>$(NETCoreSdkVersion)</_Parameter1>
+        </AssemblyAttribute>
     </ItemGroup>
+
+    <Target Name="GetLambdajectionVersion" BeforeTargets="BeforeBuild" DependsOnTargets="ResolveReferences;RunResolvePackageDependencies">
+        <ItemGroup>
+            <AssemblyAttribute Include="LambdajectionVersion" Condition="%(PackageDefinitions.Name) == 'Lambdajection'">
+                <_Parameter1>%(PackageDefinitions.Version)</_Parameter1>
+            </AssemblyAttribute>
+        </ItemGroup>
+    </Target>
 
     <ItemGroup>
         <PackageReference Include="AWSSDK.ECR" Version="3.7.2.6" />
@@ -18,6 +30,6 @@
 
     <ItemGroup>
         <ProjectReference Include="../../src/Adapter/Adapter.csproj" ReferenceOutputAssembly="false" Targets="Publish" />
-        <ProjectReference Include="../../src/ResponseHandler/ResponseHandler.csproj" ReferenceOutputAssembly="false" Targets="Publish" />
+        <ProjectReference Include="../../src/ResponseHandler/ResponseHandler.csproj" Targets="Publish" />
     </ItemGroup>
 </Project>
