--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -85,3 +85,32 @@ jobs:
             --project cicd/Cicd.DeployDriver/Cicd.DeployDriver.csproj -- \
             --artifacts-location ${{ needs.build.outputs.artifacts-location }} \
             --environment dev
+
+  deploy-prod:
+    runs-on: ubuntu-latest
+    needs: build
+    concurrency: prod
+    environment: Production
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          role-to-assume: ${{ secrets.AWS_PROD_ROLE }}
+          aws-region: us-east-1
+
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v1
+
+      - name: Display .NET Info
+        run: dotnet --info
+
+      - name: Deploy to Prod
+        run: |
+          dotnet run \
+            --project cicd/Cicd.DeployDriver/Cicd.DeployDriver.csproj -- \
+            --artifacts-location ${{ needs.build.outputs.artifacts-location }} \
+            --environment prod
