--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,6 +26,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       artifacts-location: ${{ steps.build.outputs.artifacts-location }}
+      image: ${{ steps.build.outputs.image }}
     steps:
       - uses: actions/checkout@v2
         with:
@@ -84,11 +85,12 @@ jobs:
           dotnet run \
             --project cicd/Cicd.DeployDriver/Cicd.DeployDriver.csproj -- \
             --artifacts-location ${{ needs.build.outputs.artifacts-location }} \
+            --image ${{ needs.build.outputs.image }} \
             --environment dev
 
   deploy-prod:
     runs-on: ubuntu-latest
-    needs: build
+    needs: deploy-dev
     concurrency: prod
     environment: Production
     steps:
@@ -113,4 +115,5 @@ jobs:
           dotnet run \
             --project cicd/Cicd.DeployDriver/Cicd.DeployDriver.csproj -- \
             --artifacts-location ${{ needs.build.outputs.artifacts-location }} \
+            --image ${{ needs.build.outputs.image }} \
             --environment prod
