--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -86,7 +86,9 @@ jobs:
 
   deploy-prod:
     runs-on: ubuntu-latest
-    needs: deploy-dev
+    needs:
+      - build
+      - deploy-dev
     concurrency: prod
     environment: Production
     steps:
