--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -86,6 +86,7 @@ jobs:
 
   deploy-prod:
     runs-on: ubuntu-latest
+    if: ${{ format('refs/heads/{0}', github.event.repository.default_branch) == github.ref }}
     needs:
       - build
       - deploy-dev
