--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -6,6 +6,7 @@ on:
       - "master"
     tags:
       - "*"
+  workflow_dispatch:
   pull_request:
   schedule:
     - cron: "0 0 * * *"
@@ -23,6 +24,8 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+    outputs:
+      artifacts-location: ${{ steps.build.outputs.artifacts-location }}
     steps:
       - uses: actions/checkout@v2
         with:
@@ -34,6 +37,13 @@ jobs:
           role-to-assume: ${{ secrets.AWS_SHARED_ROLE }}
           aws-region: us-east-1
 
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "14"
+
+      - name: Install CDK
+        run: npm install --global cdk
+
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v1
 
@@ -41,7 +51,67 @@ jobs:
         run: dotnet --info
 
       - name: Build
+        id: build
         run: |
           dotnet run \
             --project cicd/Cicd.BuildDriver/Cicd.BuildDriver.csproj -- \
             --version ${{ github.run_number }}
+
+  deploy-dev:
+    runs-on: ubuntu-latest
+    needs: build
+    concurrency: dev
+    environment: Development
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          role-to-assume: ${{ secrets.AWS_DEV_ROLE }}
+          aws-region: us-east-1
+
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v1
+
+      - name: Display .NET Info
+        run: dotnet --info
+
+      - name: Deploy to Dev
+        run: |
+          dotnet run \
+            --project cicd/Cicd.DeployDriver/Cicd.DeployDriver.csproj -- \
+            --artifacts-location ${{ needs.build.outputs.artifacts-location }} \
+            --environment dev
+
+  deploy-prod:
+    runs-on: ubuntu-latest
+    if: ${{ format('refs/heads/{0}', github.event.repository.default_branch) == github.ref }}
+    needs:
+      - build
+      - deploy-dev
+    concurrency: prod
+    environment: Production
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          role-to-assume: ${{ secrets.AWS_PROD_ROLE }}
+          aws-region: us-east-1
+
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v1
+
+      - name: Display .NET Info
+        run: dotnet --info
+
+      - name: Deploy to Prod
+        run: |
+          dotnet run \
+            --project cicd/Cicd.DeployDriver/Cicd.DeployDriver.csproj -- \
+            --artifacts-location ${{ needs.build.outputs.artifacts-location }} \
+            --environment prod
