--- a/cicd/Cicd.BuildDriver/Cicd.BuildDriver.csproj
+++ b/cicd/Cicd.BuildDriver/Cicd.BuildDriver.csproj
@@ -8,16 +8,28 @@
         <AssemblyAttribute Include="ProjectRootDirectory">
             <_Parameter1>$([System.IO.Path]::GetFullPath('$(MSBuildThisFileDirectory)../../'))</_Parameter1>
         </AssemblyAttribute>
+
+        <AssemblyAttribute Include="DotnetSdkVersion">
+            <_Parameter1>$(NETCoreSdkVersion)</_Parameter1>
+        </AssemblyAttribute>
     </ItemGroup>
 
+    <Target Name="GetLambdajectionVersion" BeforeTargets="BeforeBuild" DependsOnTargets="ResolveReferences;RunResolvePackageDependencies">
+        <ItemGroup>
+            <AssemblyAttribute Include="LambdajectionVersion" Condition="%(PackageDefinitions.Name) == 'Lambdajection'">
+                <_Parameter1>%(PackageDefinitions.Version)</_Parameter1>
+            </AssemblyAttribute>
+        </ItemGroup>
+    </Target>
+
     <ItemGroup>
-        <PackageReference Include="AWSSDK.ECR" Version="3.7.2.6" />
         <PackageReference Include="AWSSDK.SecurityToken" Version="3.7.1.100" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
     </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="../../src/Adapter/Adapter.csproj" ReferenceOutputAssembly="false" Targets="Publish" />
-        <ProjectReference Include="../../src/ResponseHandler/ResponseHandler.csproj" ReferenceOutputAssembly="false" Targets="Publish" />
+        <ProjectReference Include="../../src/ResponseHandler/ResponseHandler.csproj" Targets="Publish" />
+        <ProjectReference Include="../Cicd.Utils/Cicd.Utils.csproj" />
     </ItemGroup>
 </Project>
