--- a/.github/workflows/approval.yml
+++ b/.github/workflows/approval.yml
@@ -1,10 +1,8 @@
 name: Approval Notification
-on:
-  deployment_status:
-    types: [pending]
-
+on: deployment_status
 jobs:
   notify:
     runs-on: ubuntu-latest
+    if: ${{ github.event.state == 'pending' }}
     steps:
       - run: echo Hello World
