--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -57,6 +57,12 @@ jobs:
             --project cicd/Cicd.BuildDriver/Cicd.BuildDriver.csproj -- \
             --version ${{ github.run_number }}
 
+      - name: Test
+        run: |
+          dotnet test \
+            --logger trx \
+            --no-build
+
   deploy-dev:
     runs-on: ubuntu-latest
     needs: build
