--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -54,6 +54,7 @@ jobs:
         id: build
         run: |
           dotnet run \
+            --verbosity minimal \
             --project cicd/Cicd.BuildDriver/Cicd.BuildDriver.csproj -- \
             --version ${{ github.run_number }}
 
