--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -71,60 +71,24 @@ jobs:
             --no-build
 
   deploy-dev:
-    runs-on: ubuntu-latest
+    uses: cythral/brighid-discord-adapter/.github/workflows/deploy.yml@master
     needs: build
-    concurrency: dev
-    environment: Development
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          role-to-assume: ${{ secrets.AWS_DEV_ROLE }}
-          aws-region: us-east-1
-
-      - name: Setup .NET Core
-        uses: actions/setup-dotnet@v1
-
-      - name: Display .NET Info
-        run: dotnet --info
-
-      - name: Deploy to Dev
-        run: |
-          dotnet run \
-            --project cicd/Cicd.DeployDriver/Cicd.DeployDriver.csproj -- \
-            --artifacts-location ${{ needs.build.outputs.artifacts-location }} \
-            --environment dev
+    with:
+      environment: Development
+      artifacts-location: ${{ needs.build.outputs.artifacts-location }}
+    secrets:
+      role: ${{ secrets.AWS_DEV_ROLE }}
+      discord-webhook: ${{ secrets.DISCORD_WEBHOOK }}
 
   deploy-prod:
-    runs-on: ubuntu-latest
+    uses: cythral/brighid-discord-adapter/.github/workflows/deploy.yml@master
     if: ${{ format('refs/heads/{0}', github.event.repository.default_branch) == github.ref }}
     needs:
       - build
       - deploy-dev
-    concurrency: prod
-    environment: Production
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          role-to-assume: ${{ secrets.AWS_PROD_ROLE }}
-          aws-region: us-east-1
-
-      - name: Setup .NET Core
-        uses: actions/setup-dotnet@v1
-
-      - name: Display .NET Info
-        run: dotnet --info
-
-      - name: Deploy to Prod
-        run: |
-          dotnet run \
-            --project cicd/Cicd.DeployDriver/Cicd.DeployDriver.csproj -- \
-            --artifacts-location ${{ needs.build.outputs.artifacts-location }} \
-            --environment prod
+    with:
+      environment: Production
+      artifacts-location: ${{ needs.build.outputs.artifacts-location }}
+    secrets:
+      role: ${{ secrets.AWS_PROD_ROLE }}
+      discord-webhook: ${{ secrets.DISCORD_WEBHOOK }}
