--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,12 @@ on:
         type: string
         required: true
 
+env:
+  DOTNET_NOLOGO: "true"
+  CONFIGURATION: Release
+  DOTNET_SYSTEM_GLOBALIZATION_INVARIANT: "true"
+  DOTNET_SYSTEM_GLOBALIZATION_PREDEFINED_CULTURES_ONLY: "false"
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
