--- a/src/Adapter/Adapter.csproj
+++ b/src/Adapter/Adapter.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Brighid.Identity.Client" Version="0.5.0" />
     <PackageReference Include="Brighid.Commands.Client" Version="0.2.0-beta5" />
     <PackageReference Include="AWSSDK.CloudWatch" Version="3.7.3.26" />
     <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.7.3.27" />
@@ -24,7 +25,6 @@
     </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.2" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.1" />
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.16.0" />
   </ItemGroup>
 
   <ItemGroup>
