--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -8,5 +8,6 @@
     <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="System.Linq.Async" Version="6.0.1" />
+    <PackageReference Include="AWSXRayRecorder" Version="2.10.1" />
   </ItemGroup>
 </Project>
