--- a/cicd/Cicd.DeployDriver/Cicd.DeployDriver.csproj
+++ b/cicd/Cicd.DeployDriver/Cicd.DeployDriver.csproj
@@ -6,6 +6,7 @@
     <ItemGroup>
         <PackageReference Include="AWSSDK.CloudFormation" Version="3.7.9.6" />
         <PackageReference Include="AWSSDK.S3" Version="3.7.8" />
+        <PackageReference Include="AWSSDK.ECS" Version="3.7.4.35" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
     </ItemGroup>
 
