--- a/cicd/template.yml
+++ b/cicd/template.yml
@@ -218,6 +218,9 @@ Resources:
       TaskRoleArn: !GetAtt TaskRole.Arn
       RequiresCompatibilities:
         - FARGATE
+      RuntimePlatform:
+        CpuArchitecture: ARM64
+        OperatingSystemFamily: LINUX
       ProxyConfiguration:
         Type: APPMESH
         ContainerName: envoy
