--- a/src/Adapter/Adapter.csproj
+++ b/src/Adapter/Adapter.csproj
@@ -4,7 +4,7 @@
     <OutputType>Exe</OutputType>
     <NoWarn>CS1591</NoWarn>
     <TrimMode>copyused</TrimMode>
-    <RuntimeIdentifier>linux-musl-x64</RuntimeIdentifier>
+    <RuntimeIdentifier>linux-musl-arm64</RuntimeIdentifier>
     <PublishTrimmed>true</PublishTrimmed>
     <PublishSelfContained>true</PublishSelfContained>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
