--- a/src/Adapter/Adapter.csproj
+++ b/src/Adapter/Adapter.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Brighid.Identity.Client" Version="0.6.0-beta1" />
     <PackageReference Include="Brighid.Commands.Client" Version="0.2.0-beta6" />
     <PackageReference Include="AWSSDK.CloudWatch" Version="3.7.4.1" />
     <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.7.3.48" />
