--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -70,6 +70,15 @@ jobs:
             --logger trx \
             --no-build
 
+  start-dev-db:
+    uses: cythral/mutedac/.github/workflows/start.yml@master
+    needs: build
+    with:
+      environment: Development
+    secrets:
+      role: ${{ secrets.AWS_DEV_ROLE }}
+      discord-webhook: ${{ secrets.DISCORD_WEBHOOK }}
+
   deploy-dev:
     uses: cythral/brighid-discord-adapter/.github/workflows/deploy.yml@master
     needs: build
