CYTHINF-248 Fix Workflow Ordering

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -81,7 +81,9 @@ jobs:
 
   deploy-dev:
     uses: cythral/brighid-discord-adapter/.github/workflows/deploy.yml@master
-    needs: build
+    needs: 
+      - build
+      - start-dev-db
     with:
       environment: Development
       artifacts-location: ${{ needs.build.outputs.artifacts-location }}
