BRGD-236 Cache Expiry DNS Name Hotfix
This fixes an issue where the lambda would fail since Uri.DnsSafeHost
throws an exception for 'relative uris,' and the AdapterUrl was being
detected as one.

--- a/cicd/template.yml
+++ b/cicd/template.yml
@@ -458,7 +458,7 @@ Resources:
         SubnetIds: !Split [",", !ImportValue cfn-utilities:PrivateSubnetIds]
       Environment:
         Variables:
-          Expirer__AdapterUrl: !Sub http://${DomainName}
+          Expirer__AdapterUrl: !Ref DomainName
           Identity__IdentityServerUri: !Sub http://${IdentityServerUri}
           Identity__ClientId: !GetAtt CacheExpirerIdentityApplication.Id
           Identity__ClientSecret: !GetAtt CacheExpirerIdentityApplication.EncryptedSecret
