--- a/src/CacheExpirer/CacheExpirer.csproj
+++ b/src/CacheExpirer/CacheExpirer.csproj
@@ -10,10 +10,10 @@
 
     <ItemGroup>
         <PackageReference Include="Brighid.Identity.Client" Version="0.5.0" />
-        <PackageReference Include="Lambdajection" Version="0.9.2" />
-        <PackageReference Include="Lambdajection.Encryption" Version="0.9.2" />
-        <PackageReference Include="Lambdajection.Runtime" Version="0.9.2" />
-        <PackageReference Include="Lambdajection.Layer" Version="0.9.2" />
-        <PackageReference Include="Lambdajection.Sns" Version="0.9.2" />
+        <PackageReference Include="Lambdajection" Version="0.10.0-beta1" />
+        <PackageReference Include="Lambdajection.Encryption" Version="0.10.0-beta1" />
+        <PackageReference Include="Lambdajection.Runtime" Version="0.10.0-beta1" />
+        <PackageReference Include="Lambdajection.Layer" Version="0.10.0-beta1" />
+        <PackageReference Include="Lambdajection.Sns" Version="0.10.0-beta1" />
     </ItemGroup>
 </Project>
