--- a/src/ResponseHandler/ResponseHandler.csproj
+++ b/src/ResponseHandler/ResponseHandler.csproj
@@ -9,11 +9,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Amazon.Lambda.SNSEvents" Version="2.0.0" />
         <PackageReference Include="AWSSDK.SQS" Version="3.7.2.74" />
         <PackageReference Include="Lambdajection" Version="0.10.0-beta1" />
         <PackageReference Include="Lambdajection.Runtime" Version="0.10.0-beta1" />
         <PackageReference Include="Lambdajection.Layer" Version="0.10.0-beta1" />
+        <PackageReference Include="Lambdajection.Sns" Version="0.10.0-beta1" />
     </ItemGroup>
 
     <ItemGroup>
