BRGD-257 Node Info Endpoint

--- a/cicd/template.yml
+++ b/cicd/template.yml
@@ -388,7 +388,9 @@ Resources:
             Resource: !GetAtt RestQueue.Arn
 
           - Effect: Allow
-            Action: sqs:SendMessage
+            Action:
+              - sqs:SendMessage
+              - ecs:DescribeTasks
             Resource: "*"
 
   LogGroup:
