--- a/src/Adapter/Adapter.csproj
+++ b/src/Adapter/Adapter.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <PackageReference Include="Brighid.Identity.Client" Version="0.6.1" />
     <PackageReference Include="Brighid.Commands.Client" Version="0.2.0" />
+    <PackageReference Include="AWSSDK.ECS" Version="3.7.5.48" />
     <PackageReference Include="AWSSDK.CloudWatch" Version="3.7.4.30" />
     <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.7.3.77" />
     <PackageReference Include="Destructurama.Attributed" Version="3.0.0" />
