--- a/cicd/template.yml
+++ b/cicd/template.yml
@@ -293,6 +293,8 @@ Resources:
               Value: !Ref ClientId
             - Name: Encrypted__Adapter__ClientSecret
               Value: !Ref ClientSecret
+            - Name: Adapter__Host
+              Value: !Ref DomainName
             - Name: Adapter__StaticAssetsRepositoryUrl
               Value: !Ref StaticAssetsRepositoryUrl
             - Name: Adapter__RegistrationUrl
