--- a/cicd/template.yml
+++ b/cicd/template.yml
@@ -112,13 +112,6 @@ Resources:
           - PortMapping:
               Port: 80
               Protocol: http2
-            HealthCheck:
-              UnhealthyThreshold: 3
-              HealthyThreshold: 5
-              TimeoutMillis: 30000
-              Path: /healthcheck
-              Protocol: http2
-              IntervalMillis: 30000
         ServiceDiscovery:
           AWSCloudMap:
             NamespaceName: !ImportValue brighid-infrastructure:ServiceRegistryName
@@ -154,8 +147,10 @@ Resources:
             Type: A
           - TTL: 60
             Type: SRV
-      HealthCheckCustomConfig:
-        FailureThreshold: 1
+      HealthCheckConfig:
+        Type: HTTPS
+        ResourcePath: /healthcheck
+        FailureThreshold: 3
       NamespaceId: !ImportValue brighid-infrastructure:ServiceRegistry
       Name: discord
 
