Set HealthCheck Property on Container Definition

--- a/cicd/template.yml
+++ b/cicd/template.yml
@@ -244,6 +244,7 @@ Resources:
               Condition: HEALTHY
           PortMappings:
             - ContainerPort: 80
+          HealthCheck: {}
           LogConfiguration:
             LogDriver: awslogs
             Options:
