specify healthcheck command

--- a/cicd/template.yml
+++ b/cicd/template.yml
@@ -244,7 +244,10 @@ Resources:
               Condition: HEALTHY
           PortMappings:
             - ContainerPort: 80
-          HealthCheck: {}
+          HealthCheck:
+            Command:
+              - CMD-SHELL
+              - curl --fail --http2-prior-knowledge http://localhost/healthcheck || exit 1
           LogConfiguration:
             LogDriver: awslogs
             Options:
@@ -319,9 +322,6 @@ Resources:
             Command:
               - CMD-SHELL
               - curl -s http://localhost:9901/server_info | grep state | grep -q LIVE
-            Interval: 5
-            Timeout: 2
-            Retries: 3
           LogConfiguration:
             LogDriver: "awslogs"
             Options:
