--- a/src/Adapter/Adapter.csproj
+++ b/src/Adapter/Adapter.csproj
@@ -13,13 +13,23 @@
   <ItemGroup>
     <PackageReference Include="Brighid.Identity.Client" Version="0.6.3" />
     <PackageReference Include="Brighid.Commands.Client" Version="0.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AWSSDK.ECS" Version="3.7.5.48" />
     <PackageReference Include="AWSSDK.CloudWatch" Version="3.7.4.30" />
     <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.7.3.77" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Destructurama.Attributed" Version="3.0.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
+    <PackageReference Include="Serilog.Filters.Expressions" Version="2.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
-    <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.6">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
