--- a/cicd/template.yml
+++ b/cicd/template.yml
@@ -116,6 +116,7 @@ Resources:
           AWSCloudMap:
             NamespaceName: !ImportValue brighid-infrastructure:ServiceRegistryName
             ServiceName: discord
+            IpPreference: IPv6_PREFERRED
 
   MeshGatewayRoute:
     Type: Custom::MeshGatewayRoute
@@ -136,7 +137,7 @@ Resources:
             Hostname:
               Exact: !Ref DomainName
 
-  ServiceRegistryRecord:
+  ServiceRegistry:
     Type: AWS::ServiceDiscovery::Service
     Properties:
       Description: Service Registry Record for Brighid Discord Adapter
@@ -145,6 +146,8 @@ Resources:
         DnsRecords:
           - TTL: 60
             Type: A
+          - TTL: 60
+            Type: AAAA
           - TTL: 60
             Type: SRV
       HealthCheckCustomConfig:
@@ -197,7 +200,7 @@ Resources:
           AssignPublicIp: ENABLED
       TaskDefinition: !Ref TaskDefinition
       ServiceRegistries:
-        - RegistryArn: !GetAtt ServiceRegistryRecord.Arn
+        - RegistryArn: !GetAtt ServiceRegistry.Arn
           Port: 80
       DesiredCount: 1
       DeploymentConfiguration:
