--- a/src/Adapter/Adapter.csproj
+++ b/src/Adapter/Adapter.csproj
@@ -12,7 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Brighid.Identity.Client" Version="0.6.4.6" />
-    <PackageReference Include="Brighid.Commands.Client" Version="0.2.0" />
+    <PackageReference Include="Brighid.Commands.Client" Version="0.3.0.119-beta1" />
   </ItemGroup>
 
   <ItemGroup>
