--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -103,7 +103,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Reject Old Deployments
-        run: ./.github/scripts/reject-old-deployments.sh
+        run: ./.github/scripts/reject-old-deployments.sh ${{ github.repository }}
 
   deploy-prod:
     uses: cythral/brighid-discord-adapter/.github/workflows/deploy.yml@master
