BRGD-270 Use Simplified Hosting Model

--- a/cicd/config.yml
+++ b/cicd/config.yml
@@ -80,3 +80,11 @@ Parameters:
   MeshNodeName:
     Development: discord-dev
     Production: discord-prod
+
+  LogLevel:
+    Development: Debug
+    Production: Information
+
+  ValidateScopes:
+    Development: "true"
+    Production: "false"
