--- a/.editorconfig
+++ b/.editorconfig
@@ -65,6 +65,9 @@ dotnet_diagnostic.SA1200.severity = none
 # Elements must be documented (StyleCop takes care of this)
 dotnet_diagnostic.CS1591.severity = none
 
+# Block Namespace
+dotnet_diagnostic.IDE0160.severity = none
+
 [tests/**.{cs,csx}]
 # Unused parameters
 dotnet_diagnostic.CA1801.severity = none
