Use Shared Lambda Security Group

--- a/cicd/template.yml
+++ b/cicd/template.yml
@@ -491,7 +491,7 @@ Resources:
             Topic: !ImportValue brighid-infrastructure:CacheExpirationTopic
       VpcConfig:
         SecurityGroupIds:
-          - !Ref CacheExpirerSecurityGroup
+          - !ImportValue cfn-utilities:LambdaSecurityGroupId
         SubnetIds: !Split [",", !ImportValue cfn-utilities:PrivateSubnetIds]
       Environment:
         Variables:
@@ -500,12 +500,6 @@ Resources:
           Identity__IdentityServerUri: !Sub http://${IdentityServerUri}
           Identity__ClientId: !GetAtt CacheExpirerIdentityApplication.Id
           Identity__ClientSecret: !GetAtt CacheExpirerIdentityApplication.EncryptedSecret
-
-  CacheExpirerSecurityGroup:
-    Type: AWS::EC2::SecurityGroup
-    Properties:
-      GroupDescription: Security Group for Brighid Discord Cache Expirer
-      VpcId: !ImportValue cfn-utilities:VpcId
 
   CacheExpirerIdentityApplication:
     Type: Custom::IdentityApplication
