BRGD-266 Add Unit to Alarm

--- a/cicd/template.yml
+++ b/cicd/template.yml
@@ -544,6 +544,7 @@ Resources:
       MetricName: GatewayRestarted
       Namespace: !Ref MetricsNamespace
       TreatMissingData: notBreaching
+      Unit: Count
       AlarmActions:
         - !Ref MonitoringTopic
       OKActions:
